<resources>
    <string name="selected_language">English</string>
    <string name="language">English</string>
    <string name="app_name">Red Stripe</string>
    <string name="add_a_game">Add/Modify a game</string>
    <string name="connection_error">Connection error, please try again</string>
    <string name="no_matching_games">no matching game found</string>
    <string name="common_error">An error occurred, please try again</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="player_number">from %1$s to %2$s players</string>
    <string name="player_number_display">number of players:</string>
    <string name="player_min">from %1$s players</string>
    <string name="player_max">to %1$s players</string>
    <string name="age">%1$s and older</string>
    <string name="unknown">Unknown</string>
    <string name="add_permission">Add permission</string>
    <string name="delete_permission">delete permission</string>
    <string name="modify_permission">modify permission</string>
    <string name="synchronize_permission">synchronize permission</string>
    <string name="account_create_permission">Create account permission</string>
    <string name="delete_account_permission">Delete account permission</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_password_again">Enter your password again</string>
    <string name="password_rules">
        login must not be empty, \n
        password must contain at least:\n
        - 1 lower case letter\n
        - 1 upper case letter\n
        - 1 digit\n
        - 1 special character\n
        - 8 characters\n
    </string>
    <string name="save_and_synchronize">Save modification and synchronize</string>
    <string name="reset_content">Reset local database content</string>
    <string name="save_local">Save local database</string>
    <string name="reset_local">Load local save</string>
    <string name="synchronize_parameters">Synchronisation parameters</string>
    <string name="search">Search</string>
    <string name="download_images">Download images</string>
    <string name="add_account">Add an account</string>
    <string name="delete_account">Delete accounts</string>
    <plurals name="delete_accounts">
        <item quantity="one">Do you really want to delete this account?</item>
        <item quantity="other">>Do you really want to delete %d accounts?</item>
    </plurals>
    <string name="delete_account_none_selected">Please select at least one account</string>
    <string name="add_element">Add a game</string>
    <string name="api_add_element">Add a game with BGA</string>
    <string name="change_password">Change password</string>
    <string name="disconnect">Logout</string>
    <string name="save_synchronize_message">
        Do you want to save all your modifications and synchronize?
    </string>
    <string name="reset_content_message">
        Do you want to reset your local database and get a new from the server?
    </string>
    <string name="error_content">Error: %1$s</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="url_api">URL API</string>
    <string name="url_static_file">URL IMAGE STATIC FILES</string>
    <string name="url_web_message">Enter you API URL and IMAGE STATIC FILES URL</string>
    <string name="parameters">Parameters</string>
    <string name="server_less">Serverless mode</string>
    <string name="old_password">Last password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_changed">Password changed</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="user_unidentified">Unidentified user</string>
    <string name="wrong_password">Wrong password</string>
    <string name="search_result">Search result</string>
    <string name="delete_object">Delete unused non-game data</string>
    <string name="designer">Designer</string>
    <string name="designers">Designers</string>
    <string name="artist">Artist:</string>
    <string name="artists">Artists:</string>
    <string name="publisher">Publisher:</string>
    <string name="publishers">Publishers:</string>
    <string name="tag">Tag:</string>
    <string name="tags">Tags:</string>
    <string name="topic">Topic:</string>
    <string name="topics">Topics:</string>
    <string name="language_display">Language:</string>
    <string name="languages_display">Languages:</string>
    <string name="mechanism">Mechanism:</string>
    <string name="mechanisms">Mechanisms:</string>
    <string name="playing_mod">Playing mode:</string>
    <string name="playing_mods">Playing modes:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="difficulties">Difficulties:</string>
    <string name="none">None</string>
    <string name="playing_time">until %1$s minutes</string>
    <string name="playing_time_display">Playing time:</string>
    <string name="delete_add_on">Do you really want to delete this add on?</string>
    <string name="delete_game">Do you really want to delete this game?</string>
    <string name="delete_multi_add_on">
        Do you really want to delete this multi add on?
    </string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="enter_login">Enter your login</string>
    <string name="login_already_taken">login already taken</string>
    <string name="success">Success</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="take_photo">Take a picture</string>
    <string name="add_external_url">Add an external url link</string>
    <string name="get_image_from_storage">Get an internal storage image</string>
    <string name="delete_image">Delete image</string>
    <string name="reset_image">Reset image</string>
    <string name="external_image_link_copy">Copy link to external image</string>
    <string name="external_image_link">Link to external image</string>
    <string name="authorization_required">Permission required</string>
    <string name="name">Name:</string>
    <string name="game_picture">Game image</string>
    <string name="pathfinder">Pathfinder</string>
    <string name="type">Type:</string>
    <string name="game">Game</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="add_on">Add on</string>
    <string name="add_ons">Add ons:</string>
    <string name="multi_add_on">multi add on</string>
    <string name="multi_add_ons">Multi add ons:</string>
    <string name="min_player_number">Minimum number of players:</string>
    <string name="max_player_number">Maximum number of players:</string>
    <string name="max_time">Maximum playing times(in minutes):</string>
    <string name="ninety">90</string>
    <string name="link_game">Link game:</string>
    <string name="link_games">Link games:</string>
    <string name="veteran">Family</string>
    <string name="add">Add</string>
    <string name="error">Error</string>
    <string name="min_age">Minimum age:</string>
    <string name="seven">7</string>
    <string name="external_link">External hyperlink:</string>
    <string name="bgg_link_example">http://www.bgg.com</string>
    <string name="number">Number:</string>
    <string name="buying_price">Buying price:</string>
    <string name="twenty_five">25</string>
    <string name="by_player">Playing time by player?</string>
    <string name="right">True</string>
    <string name="wrong">False</string>
    <string name="save">Save</string>
    <string name="games">Games</string>
    <string name="stay_connected">Stay connected</string>
    <string name="designer_hint">Klaus</string>
    <string name="artist_hint">Dutrait</string>
    <string name="publisher_hint">Asmodée</string>
    <string name="playing_mod_hint">cooperative</string>
    <string name="language_hint">english</string>
    <string name="tag_hint">classic</string>
    <string name="mechanism_hint">war game</string>
    <string name="password_register_error">password registration error</string>
    <string name="incorrect_server_answer">Incorrect server answer: %d</string>
    <string name="name_already_exist">
        a same type named element already exist
    </string>
    <string name="create_new_account">Create new account</string>
    <string name="create_new_account_login">Enter a login</string>
    <string name="create_new_account_password">Enter a password</string>
    <string name="create_new_account_password_confirm">Confirm your password</string>
    <string name="account_management">Account management</string>
    <string name="database">Database</string>
    <string name="authentication_error">Incorrect authentication credentials.</string>
    <string name="server_less_note">unless you\'ve got a server hosting your games, remain in serverless mode</string>
</resources>