<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.APISearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_gameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pathfinder"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:minHeight="100dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAPI"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/second"
        android:text="@string/search" />

    <TextView
        android:id="@+id/etError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>