<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:padding="10dp"
android:orientation="vertical"
tools:context=".view.GameDetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDetails"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/game_picture"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbIvDetails"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvGameDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/designers"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDesigner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvDesigner"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/artists"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvArtist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvArtist"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/publishers"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPublisher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvPublisher"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/player_number_display"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGameDetailPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/playing_time_display"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGameDetailPlayingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/difficulty"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            app:cardBackgroundColor="@color/list_background"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/list_background"
                android:gravity="center|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDifficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/min_age"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGameDetailAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/playing_mods"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlayingMod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvPlayingMod"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/languages_display"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvLanguage"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tags"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list" />



        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/topics"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mechanisms"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMechanism"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/name_list" />


        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_ons"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAddOn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/game_list" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/multi_add_ons"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMultiAddOn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/game_list" />

    </LinearLayout>
</ScrollView>
