<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GenericTypeDetails"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGenericDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/name"
            android:textColor="#673AB7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/games"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenericDetailGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/game_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvGenericDetailGame"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_ons"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenericDetailAddOn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/game_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvGenericDetailAddOn"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/multi_add_ons"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenericDetailMultiAddOn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/game_list"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbRvGenericDetailMultiAddOn"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>
</ScrollView>

